# funkea

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.py  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/_build/doctrees/: README.doctree  environment.pickle  index.doctree  user_guide.doctree
docs/source/_build/doctrees/_autosummary/: funkea.doctree
docs/source/_build/doctrees/markdown/: README.doctree
docs/source/_build/doctrees/reference/: components.doctree  components.filtering.doctree  components.locus_definition.doctree  components.normalisation.doctree  components.variant_selection.doctree  core.data.doctree  core.doctree  core.method.doctree  core.params.doctree  core.pipeline.doctree  core.utils.doctree  core.utils.files.doctree  (+13 more)
docs/source/_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user_guide.html
docs/source/reference/: components.rst  components.variant_selection.rst  core.data.rst  core.method.rst  core.params.rst  core.utils.types.rst  core.workflow.rst  implementations.fisher.rst  implementations.garfield.rst
examples/: getting_started.ipynb
funkea/: __init__.py  __main__.py
funkea/components/: __init__.py  filtering.py  locus_definition.py  normalisation.py  variant_selection.py
funkea/core/: __init__.py  data.py  method.py  params.py  pipeline.py  workflow.py
funkea/core/resources/: file_registry.json
funkea/core/utils/: files.py  functions.py  jvm.py  partition.py  types.py  version.py
funkea/implementations/: __init__.py  depict.py  fisher.py  garfield.py  ldsc.py  snpsea.py
ldsc/: __init__.py  base.py  heritability.py  math.py  util.py
scala/spark-udf/: .gitignore  README.md  build.sbt
scala/spark-udf/project/: plugins.sbt
scripts/: install-scala.sh
tests/funkea/: conftest.py  test___main__.py
tests/funkea/components/: test_filtering.py  test_locus_definition.py  test_normalisation.py  test_variant_selection.py
tests/funkea/core/: test_data.py  test_method.py  test_params.py  test_pipeline.py  test_workflow.py
tests/funkea/core/utils/: test_files.py  test_functions.py  test_jvm.py  test_partition.py
tests/funkea/implementations/: test_depict.py  test_fisher.py  test_garfield.py  test_ldsc.py  test_snpsea.py
tests/ldsc/: conftest.py  test_base.py  test_heritability.py  test_math.py  test_util.py
(+61 files in other folders)
